# cc1

./: -  .gitignore  Cargo.toml  DEBUG_MODE_SUMMARY.md  Dockerfile  LICENSE  Makefile  README.md  RESULTATS_TESTS.md  TODO_FIXES.md  compare_all.sh  compare_outputs.sh  complex  debug_execution.sh  fcc  hello.c  program_10.ll  program_11  program_11.bc  program_11.ll  program_11.s  program_11_clang.ll  program_11_clang_ref.ll  quick_test.sh  simple  simple_test.c  test64  test_basic.c  test_complex.c  test_conditional.c  test_debug  test_enum.c  test_global.c  test_hello  test_macro_function.c  test_macros  test_macros.c  test_macros_complex.c  test_simple_macro  test_simple_macro.c  (+8 more)
comparison_output/: cc1_0  cc1_0.ll  cc1_0.s  cc1_1  cc1_1.ll  cc1_1.s  cc1_10  cc1_10.ll  cc1_10.s  cc1_11  cc1_11.ll  cc1_11.s  cc1_11_new  cc1_2  cc1_2.ll  cc1_2.s  cc1_3  cc1_3.ll  cc1_3.s  cc1_4  cc1_4.ll  cc1_4.s  cc1_5  cc1_5.ll  cc1_5.s  cc1_6  cc1_6.ll  cc1_6.s  cc1_7  cc1_7.ll  cc1_7.s  cc1_8  cc1_8.ll  cc1_8.s  cc1_9  cc1_9.ll  cc1_9.s  clang_1  clang_10  clang_11  (+15 more)
include/: core.hpp
src/: lexer.rs  main.cpp  main.rs  preproc.rs
src/back/: mod.rs
tests/: array_sum.c  enum_test.c  expr_basic.c  for_loop.c  function_pointer.c  function_pointer_alt.c  hello.c  recursion.c  simple_array.c  simple_test.c  simple_var.c  struct_test.c  switch_case.c  test.md  test_c89.c  test_c89_pure.c  test_control.c  test_exhaustive.c  test_final.c  test_missing.c  test_operators.c  test_pointers.c  test_simple.c  test_strings.c  test_struct.c  typedef_test.c  while_loop.c
tools/: abi_matrix.h
(+264 files in other folders)
