[package]
name = "cc1"
version = "0.1.0"
authors = ["sperron"]
edition = "2021"

[dependencies]
# Lexer
logos = "0.15"

# CLI args
clap = { version = "4.5", features = ["derive"] }

# LLVM IR generation
inkwell = { version = "0.4", features = ["llvm14-0"] }

# Error management
thiserror = "2.0.12"

# Colors for terminal output
colored = "3.0"

[build-dependencies]

[profile.release]
opt-level = "z"